Minor changes to README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 First attempt at a testing template.
 Uses Vows
 Run the following command to see broken tests if any:
-	zsh runTests
+	./runTests
 Run the following command to see all specs of all tests:
-	zsh runTests spec
+	./runTests spec
